package at.spengergasse.diplo3entities.enums;

public enum FrontendArea {
    HEADER,
    FOOTER,
    SIDEBAR,
    MAIN,
    ABOUT
}