package at.spengergasse.diplo3entities.service;

import org.springframework.stereotype.Service;

@Service
public class EventService {

}
