package at.spengergasse.diplo3entities.service;

import at.spengergasse.diplo3entities.enums.FrontendArea;
import at.spengergasse.diplo3entities.model.TextSection;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Service;

import java.util.List;

@Service
public class TextSectionService {

}